Added data to notification. Commit before job refactor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SolarThing Android</string>
+    <string name="app_name">SolarThing</string>
     <string name="persistent_status">Persistent Status</string>
     <string name="persistent_status_description">Persistent Notification that shows the status</string>
     <string name="generator_notification">Generator Alert</string>
