--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,11 @@
     <string name="app_name">ST</string>
 
     <string name="generator_float_notification">Generator Float Done Alert</string>
-    <string name="generator_float_notification_status">Sends an alert when the generator should be turned off when the float charge is done</string>
+    <string name="generator_float_notification_description">Sends an alert when the generator should be turned off when the float charge is done</string>
     <string name="generator_done_notification">Generator Charge Done Alert</string>
-    <string name="generator_done_notification_status">Sends an alert when the generator should be turned off when it has stopped charging the batteries</string>
+    <string name="generator_done_notification_description">Sends an alert when the generator should be turned off when it has stopped charging the batteries</string>
+    <string name="battery_notification">Low Battery Alert</string>
+    <string name="battery_notification_description">Sends an alert when the battery voltage is below a configurable value</string>
 
     <string name="persistent">Persistent indicator</string>
     <string name="persistent_description">Notification that shows the SolarThing service is running</string>
