--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,7 @@
     <string name="solar_group_description">All notifications related to solar status</string>
     <string name="outhouse_group">Outhouse</string>
     <string name="outhouse_group_description">All notifications related to outhouse status</string>
+
+    <string name="appwidget_text">99.9</string>
+    <string name="add_widget">Add widget</string>
 </resources>
