--- a/wearos/src/main/res/values/strings.xml
+++ b/wearos/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     -->
     <string name="hello_world">Hello Square World!</string>
     <string name="complication_battery_voltage">Battery Voltage</string>
+    <string name="complication_battery_temperature">Battery Temperature</string>
 </resources>
