--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="event_display_select">Event Display</string>
     <string name="commands_select">Commands</string>
     <string name="notification_settings_select">Notifications</string>
+    <string name="application_settings_select">App Settings</string>
     <string name="grafana_select">Grafana</string>
 
     <string name="generator_done_notification">Generator Done Alert</string>
