--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">SolarThing</string>
+    <string name="main_select">Home</string>
     <string name="settings_connection_select">Connection Settings</string>
     <string name="settings_solar_select">Solar Settings</string>
     <string name="settings_misc_select">Other Settings</string>
